src/test/deca/context/invalid/resultats/test_invalid_method_definition-cont.res
./src/test/deca/context/invalid/test_invalid_method_definition.deca:20:1: Method  getX was already defined
